feat: added a suggestField file, responsible for ensuring that data is retured in a format accepted by elasticsearch